# flowsurface-server

./: .gitignore  Cargo.toml
config/: tickers.toml
exchanges/: Cargo.toml
exchanges/src/: adapter.rs  lib.rs
exchanges/src/adapter/: binance.rs  bybit.rs  coinbase.rs
src/: config.rs  logger.rs  main.rs  server.rs
