[package]
name = "flowsurface-server"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
questdb-rs = { version = "4.0.4", features = ["chrono_timestamp"] }
futures.workspace = true
exchanges.workspace = true
tokio = { version = "1.44.1", features = ["rt-multi-thread", "signal"] }
anyhow = "1.0.97"
env_logger = "0.11.7"

[workspace]
members = [ "exchanges"]

[workspace.dependencies]
futures = "0.3.31"
chrono = { version = "0.4.40", features = ['serde'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
log = "0.4.22"
thiserror = "2.0.12"
ordered-float = "5.0.0"
regex = "1.11.1"
rust_decimal = "1.36.0"
uuid = { version = "1.11.0", features = ["v4"] }

exchanges = { version = "0.1.0", path = "exchanges" }
